--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     </div>
                 </div>
                 <div class="right-div">
-                    <img src="https://cdn.discordapp.com/attachments/1128079625818480751/1148311496732975104/output-onlinegiftools_2.gif" alt="">
+                    <img src="https://cdn.discordapp.com/attachments/1128079625818480751/1148887387699675136/output-onlinegiftools_3.gif"
+                        alt="">
                 </div>
             </div>
         </div>
@@ -133,16 +134,6 @@
 
                 <div class="skills-card" style="--i:3;">
                     <div>
-                        <img class="skills-card-img" src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg"
-                            alt="">
-                    </div>
-                    <div class="skills-card-name">
-                        MySQL
-                    </div>
-                </div>
-
-                <div class="skills-card" style="--i:4;">
-                    <div>
                         <img class="skills-card-img" src="Skills_Logo/hibernate_logo.png" alt="">
                     </div>
                     <div class="skills-card-name">
@@ -150,7 +141,7 @@
                     </div>
                 </div>
 
-                <div class="skills-card" style="--i:5;">
+                <div class="skills-card" style="--i:4;">
                     <div>
                         <img class="skills-card-img" src="https://ak016.github.io/images/maven-logo.png" alt="">
                     </div>
@@ -159,14 +150,27 @@
                     </div>
                 </div>
 
-                <div class="skills-card" style="--i:6;">
+                <div class="skills-card" style="--i:5;">
                     <div>
-                        <img class="skills-card-img" src="Skills_Logo/Git_logo.png" alt="">
+                        <img class="skills-card-img" src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg"
+                            alt="">
                     </div>
                     <div class="skills-card-name">
-                        Git
+                        MySQL
                     </div>
                 </div>
+
+                <div class="skills-card" style="--i:6;">
+                    <div>
+                        <img class="skills-card-img"
+                            src="https://cdn.discordapp.com/attachments/1128079625818480751/1136721291911634974/icons8-rest-api-64.png"
+                            alt="">
+                    </div>
+                    <div class="skills-card-name">
+                        RestApi
+                    </div>
+                </div>
+
 
                 <div class="skills-card" style="--i:7;">
                     <div>
@@ -198,12 +202,69 @@
 
                 <div class="skills-card" style="--i:10;">
                     <div>
-                        <img class="skills-card-img" src="Skills_Logo/js_logo2.jpg" alt="">
+                        <img class="skills-card-img" src="https://www.svgrepo.com/show/354202/postman-icon.svg" alt="">
                     </div>
                     <div class="skills-card-name">
-                        JavaScript
+                        PostMan
                     </div>
                 </div>
+
+                <div class="skills-card" style="--i:11;">
+                    <div>
+                        <img class="skills-card-img"
+                            src="Skills_Logo/Swagger.png"
+                            alt="">
+                    </div>
+                    <div class="skills-card-name">
+                        Swaagger
+                    </div>
+                </div>
+
+                <div class="skills-card" style="--i:12;">
+                    <div>
+                        <img class="skills-card-img" src="Skills_Logo/Git_logo.png" alt="">
+                    </div>
+                    <div class="skills-card-name">
+                        Git
+                    </div>
+                </div>
+
+                <div class="skills-card" style="--i:13;">
+                    <div>
+                        <img class="skills-card-img"
+                            src="https://cdn.discordapp.com/attachments/1128079625818480751/1133775206226337903/icons8-vs-code-100.png"
+                            alt="">
+                    </div>
+                    <div class="skills-card-name">
+                        VS Code
+                    </div>
+                </div>
+
+                <div class="skills-card" style="--i:14;">
+                    <div>
+                        <img class="skills-card-img"
+                            src="Skills_Logo/Netlify.png"
+                            alt="">
+                    </div>
+                    <div class="skills-card-name">
+                        Netlify
+                    </div>
+                </div>
+
+                <div class="skills-card" style="--i:15;">
+                    <div>
+                        <img class="skills-card-img"
+                            src="https://cdn.discordapp.com/attachments/1128079625818480751/1133774872103878806/icons8-slack-50.png"
+                            alt="">
+                    </div>
+                    <div class="skills-card-name">
+                        Slack
+                    </div>
+                </div>
+
+                
+
+
             </div>
 
         </section>
@@ -252,7 +313,8 @@
             <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/Hoshiyaarr.png" alt=""></figure>
                 <h1 class="project-title">Hoshiyaar</h1>
-                <h2>Developed Hoshiyaar, an e-commerce website inspired by Bewakoof, catering to clothing, appliances, grocery, and
+                <h2>Developed Hoshiyaar, an e-commerce website inspired by Bewakoof, catering to clothing, appliances,
+                    grocery, and
                     gadgets
                 </h2>
 
@@ -384,8 +446,8 @@
                     by imagination."</p>
             </div>
             <ul class="contact-list">
-                <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope"
-                            ></i> abhipathak3537@gmail.com</a></li>
+                <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope"></i>
+                        abhipathak3537@gmail.com</a></li>
                 <!-- <li><a href="https://github.com/abhipathak1" id="contact-github"><i class="fa-brands fa-github"
                             style="color: #000000;"></i> GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" id="contact-linkedin"><i
