--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div>
                         <h1>TECH STACK</h1>
                         <div>
-                            <img src="Skills_Logo/java.png" alt="" title="java">
+                            <img src="Skills_Logo/java_logo.png" alt="" title="java">
                             <img src="Skills_Logo/File.png" alt="" title="File">
                         </div>
                     </div>
@@ -364,7 +364,7 @@
                         <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
                                 src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/Presentation.png"
+                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png"
                                 alt=""></a>
                     </div>
                 </div>
@@ -381,9 +381,9 @@
                     <div>
                         <h1>TECH STACK</h1>
                         <div>
-                            <img src="Skills_Logo/java.png" alt="" title="java">
+                            <img src="Skills_Logo/java_logo.png" alt="" title="java">
                             <img src="Skills_Logo/hibernation.png" alt="" title="Hibernate">
-                            <img src="Skills_Logo/mySql.png" alt="" title="MySql">
+                            <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="" title="MySql">
                         </div>
                     </div>
 
@@ -392,7 +392,7 @@
                         <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
                                 src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/Presentation.png"
+                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png"
                                 alt=""></a>
                     </div>
                 </div>
