--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         meeting deadlines.</p>
                     <div class="resume-buttons">
                         <a class="resume-button" id="resume-button-2"
-                            href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Know
+                            href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD" title="Resume">Know
                             More
-                            About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
+                            About Me &nbsp <i class="fa-solid fa-arrow-right"></i> 
                         </a>
                     </div>
                 </div>
