--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
                         <p id="user-detail-name">ABHAY PATHAK</p>
                         <p id="user-detail-intro"></p>
                         <ul id="socials">
-                            <li><a href=""><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a>
+                            <li><a href="mailto:abhipatha3537@gmail.com"><i class="fa-solid fa-envelope"
+                                        style="color: #ff7300;" title="Mail"></i></a>
                             </li>
-                            <li><a href=""><i class="fa-brands fa-linkedin" style="color: #ff7300;"></i></a>
+                            <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/"><i
+                                        class="fa-brands fa-linkedin" style="color: #ff7300;" title="Linkedin"></i></a>
                             </li>
-                            <li><a href=""><i class="fa-brands fa-github" style="color: #ff7300;"></i></a>
+                            <li><a href="https://github.com/abhipathak1"><i class="fa-brands fa-github" style="color: #ff7300;"
+                                        title="github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -90,9 +93,10 @@
                         meeting deadlines.</p>
                     <div class="resume-buttons">
                         <a class="resume-button" id="resume-button-2"
-                            href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD" title="Resume">Know
+                            href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
+                            title="Resume">Know
                             More
-                            About Me &nbsp <i class="fa-solid fa-arrow-right"></i> 
+                            About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -211,9 +215,7 @@
 
                 <div class="skills-card" style="--i:11;">
                     <div>
-                        <img class="skills-card-img"
-                            src="Skills_Logo/Swagger.png"
-                            alt="">
+                        <img class="skills-card-img" src="Skills_Logo/Swagger.png" alt="">
                     </div>
                     <div class="skills-card-name">
                         Swaagger
@@ -242,9 +244,7 @@
 
                 <div class="skills-card" style="--i:14;">
                     <div>
-                        <img class="skills-card-img"
-                            src="Skills_Logo/Netlify.png"
-                            alt="">
+                        <img class="skills-card-img" src="Skills_Logo/Netlify.png" alt="">
                     </div>
                     <div class="skills-card-name">
                         Netlify
@@ -262,7 +262,7 @@
                     </div>
                 </div>
 
-                
+
 
 
             </div>
@@ -364,8 +364,7 @@
                         <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
                                 src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png"
-                                alt=""></a>
+                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -392,8 +391,7 @@
                         <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
                                 src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png"
-                                alt=""></a>
+                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png" alt=""></a>
                     </div>
                 </div>
 
@@ -448,12 +446,6 @@
             <ul class="contact-list">
                 <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope"></i>
                         abhipathak3537@gmail.com</a></li>
-                <!-- <li><a href="https://github.com/abhipathak1" id="contact-github"><i class="fa-brands fa-github"
-                            style="color: #000000;"></i> GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" id="contact-linkedin"><i
-                            class="fa-brands fa-linkedin" style="color: #000000;"></i> LinkedIn</a>
-                </li> -->
-
                 <li><a href="#" id="contact-phone"><i class="fa-solid fa-phone"></i> +91
                         8810594001</a></li>
             </ul>
@@ -473,7 +465,7 @@
         </div>
     </section>
 
-    
+
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/30a5a51570.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
