--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                 <div class="skills-card" style="--i:6;">
                     <div>
-                        <img class="skills-card-img" src="Skills_Logo/hibernate_logo.png" alt="">
+                        <img class="skills-card-img" src="Skills_Logo/hibernation.png" alt="">
                     </div>
                     <div class="skills-card-name">
                         Hibernate
