--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                         8810594001</a></li>
             </ul>
             <ul id="foot-socials">
-                <li><a href=""><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a>
+                <li><a href="https://api.whatsapp.com/send?phone=918810594001"><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a>
                 </li>
                 <li><a href=""><i class="fa-brands fa-instagram" style="color: #ff7300;"></i></a>
                 </li>
