--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="#skills" class="nav-link skills">Skills</a></li>
             <li><a href="#pp" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
-            <li><a class="nav-link resume" href="your-resume-url" target="_blank" id="resume-button-1">Resume</a></li>
+            <li><a class="nav-link resume" href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD" target="_blank" id="resume-button-1">Resume</a></li>
         </ul>
     </nav>
     
