--- a/index.html
+++ b/index.html
@@ -29,19 +29,23 @@
                 <input type="checkbox" id="dark-mode-toggle">
             </label>
         </ul>
+
         <button id="nav-toggle-button" class="nav-link">
-            <i class="fas fa-bars"></i> 
+            <i class="fas fa-bars"></i>
         </button>
+        
         <ul class="nav-list hidden" id="nav-links">
             <li><a href="#home" class="nav-link home">Home</a></li>
             <li><a href="#about-title" class="nav-link about">About</a></li>
             <li><a href="#Sills-title" class="nav-link skills">Skills</a></li>
             <li><a href="#pp" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
-            <li><a class="nav-link resume" href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD" target="_blank" id="resume-button-1">Resume</a></li>
+            <li><a class="nav-link resume"
+                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
+                    target="_blank" id="resume-button-1">Resume</a></li>
         </ul>
     </nav>
-    
+
 
 
     <!-- Home Section -->
@@ -260,10 +264,6 @@
                         Slack
                     </div>
                 </div>
-
-
-
-
             </div>
 
         </section>
