Update index.html kukur

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         type="jpeg/png">
 
     <!-- first-Font -->
+    <!-- first-Font -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +42,7 @@
             <li><a href="#pp" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <li><a class="nav-link resume"
-                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
+                    href="https://drive.google.com/uc?export=download&id=1n-8G0z6pnqzmMC5w1q3lbGpCl6mMx_qo"
                     target="_blank" id="resume-button-1">Resume</a></li>
         </ul>
     </nav>
@@ -96,7 +97,7 @@
                         meeting deadlines.</p>
                     <div class="resume-buttons">
                         <a class="resume-button" id="resume-button-2"
-                            href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
+                            href="https://drive.google.com/uc?export=download&id=1n-8G0z6pnqzmMC5w1q3lbGpCl6mMx_qo"
                             title="Resume">Know
                             More
                             About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
