--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button id="nav-toggle-button" class="nav-link">
             <i class="fas fa-bars"></i>
         </button>
-        
+
         <ul class="nav-list hidden" id="nav-links">
             <li><a href="#home" class="nav-link home">Home</a></li>
             <li><a href="#about-title" class="nav-link about">About</a></li>
@@ -369,12 +369,10 @@
             </div>
 
             <div class="project-card">
-                <figure class="swing"><img class="proimg" src="images/OnAnOn.jpg" alt=""></figure>
-                <h1 class="project-title">OnAnOn</h1>
-                <h2>OnAnOn is a simple ride-hailing application built using Java. It
-                    allows passengers to book rides and drivers to manage their
-                    profiles.</h2>
-
+                <figure class="swing"><img class="proimg" src="images/WondrWord.jpg" alt=""></figure>
+                <h1 class="project-title">WondrWord</h1>
+                <h2>WondrWord: Java Spring Boot web app for amusement park ticketing, planning, and exploration with
+                    user-friendly authentication and interfaces.</h2>
                 <div class="tech">
                     <div>
                         <h1>TECH STACK</h1>
@@ -387,7 +385,7 @@
 
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
+                        <a href="https://github.com/abhipathak1/WondrWord.git" class="project-github-link" title="Github"><img
                                 src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
                             class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png" alt=""></a>
