--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <!-- Navbar -->
     <nav id="nav-menu">
         <ul class="nav-list">
-            <li class="logo"><img src="your-logo-image-url" alt=""></li>
+            <!-- <li><a href="#" class="nav-link home">Abhay Pathak</a></li> -->
+
             <label class="switch" title="Dark-Mode">
                 <input type="checkbox" id="dark-mode-toggle">
             </label>
+
         </ul>
 
         <button id="nav-toggle-button" class="nav-link">
