--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="right-div">
-                    <img src="https://cdn.discordapp.com/attachments/1128079625818480751/1148887387699675136/output-onlinegiftools_3.gif"
+                    <img src="images/pAbout.gif"
                         alt="">
                 </div>
             </div>
