--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- first-Font -->
 
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -61,16 +61,10 @@
                         <p id="user-detail-name">ABHAY PATHAK</p>
                         <p id="user-detail-intro"></p>
                         <ul id="socials">
-                            <li><a href="mailto:abhipatha3537@gmail.com"><i class="fa-solid fa-envelope"
-                                        style="color: #ff7300;" title="Mail"></i></a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/"><i
-                                        class="fa-brands fa-linkedin" style="color: #ff7300;" title="Linkedin"></i></a>
-                            </li>
-                            <li><a href="https://github.com/abhipathak1"><i class="fa-brands fa-github"
-                                        style="color: #ff7300;" title="github"></i></a>
-                            </li>
-                        </ul>
+                            <li><a href="mailto:abhipatha3537@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color: #ff7300;" title="Mail"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ff7300;" title="Linkedin"></i></a></li>
+                            <li><a href="https://github.com/abhipathak1" target="_blank"><i class="fa-brands fa-github" style="color: #ff7300;" title="GitHub"></i></a></li>
+                        </ul>                        
                     </div>
                     <div id="mypic">
                         <img src="images/pp.png" alt="" class="home-img">
@@ -107,8 +101,7 @@
                     </div>
                 </div>
                 <div class="right-div">
-                    <img src="images/pAbout.gif"
-                        alt="">
+                    <img src="images/pAbout.gif" alt="">
                 </div>
             </div>
         </div>
@@ -296,18 +289,21 @@
                 <div class="tech">
                     <div>
                         <h1>Tech Stack</h1>
-                        <h1><i class="fa-brands fa-html5 html-icon" title="HTML"></i>
-                            <i class="fa-brands fa-css3-alt css-icon" title="CSS"></i>
-                            <i class="fa-brands fa-square-js js-icon" title="JavaScript"></i>
-                        </h1>
+                        <img src="Skills_Logo/java_logo.png" alt="" title="java">
+                        <img src="https://ak016.github.io/images/maven-logo.png" alt="" title="Maven">
+                        <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="" title="MySql">
+                        &nbsp;&nbsp;&nbsp;
+                        <img src="Skills_Logo/html_logo.png" alt="" title="HTML">
+                        <img src="Skills_Logo/css_logo.webp" alt="" title="CSS">
+                        <img src="Skills_Logo/js_logo2.jpg" alt="" title="JavaScript">
                     </div>
 
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/TravTok" class="project-github-link" title="Github"><img
-                                src="Skills_Logo/Git_logo.png" alt=""></a>
-                        <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"><img
-                                src="Skills_Logo/Netlify.png" alt=""></a>
+                        <a href="https://github.com/abhipathak1/TravTok_Java_2.0" class="project-github-link"
+                            title="Github" target="_blank"><img src="Skills_Logo/Git_logo.png" alt=""></a>
+                        <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"
+                            target="_blank"><img src="Skills_Logo/Netlify.png" alt=""></a>
                     </div>
                 </div>
 
@@ -330,10 +326,10 @@
                     </div>
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link"
-                            title="Github"><img src="Skills_Logo/Git_logo.png" alt=""></a>
-                        <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><img
-                                src="Skills_Logo/Netlify.png" alt=""></a>
+                        <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link" title="Github"
+                            target="_blank"><img src="Skills_Logo/Git_logo.png" alt=""></a>
+                        <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"
+                            target="_blank"><img src="Skills_Logo/Netlify.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -363,10 +359,11 @@
                     </div>
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
-                                src="Skills_Logo/Git_logo.png" alt=""></a>
+                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"
+                            target="_blank"><img src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png" alt=""></a>
+                            class="project-deployed-link" title="Presentation" target="_blank"><img
+                                src="Skills_Logo/pr.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -388,10 +385,11 @@
 
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/WondrWord.git" class="project-github-link" title="Github"><img
-                                src="Skills_Logo/Git_logo.png" alt=""></a>
+                        <a href="https://github.com/abhipathak1/WondrWord.git" class="project-github-link"
+                            title="Github" target="_blank"><img src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/pr.png" alt=""></a>
+                            class="project-deployed-link" title="Presentation" target="_blank"><img
+                                src="Skills_Logo/pr.png" alt=""></a>
                     </div>
                 </div>
 
@@ -443,18 +441,12 @@
                         8810594001</a></li>
             </ul>
             <ul id="foot-socials">
-                <li><a href="https://api.whatsapp.com/send?phone=918810594001"><i class="fa-brands fa-whatsapp"
-                            style="color: #ff7300;"></i></a>
-                </li>
-                <li><a href=""><i class="fa-brands fa-instagram" style="color: #ff7300;"></i></a>
-                </li>
-                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/"><i class="fa-brands fa-linkedin"
-                            style="color: #ff7300;"></i></a>
-                </li>
-                <li><a href="https://github.com/abhipathak1"><i class="fa-brands fa-github"
-                            style="color: #ff7300;"></i></a>
-                </li>
+                <li><a href="https://api.whatsapp.com/send?phone=918810594001" target="_blank"><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-instagram" style="color: #ff7300;"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ff7300;"></i></a></li>
+                <li><a href="https://github.com/abhipathak1" target="_blank"><i class="fa-brands fa-github" style="color: #ff7300;"></i></a></li>
             </ul>
+            
             <p style="margin-left: 50px;">Desingned by <span style="color: #ff7300;">Abhay Pathak</span></p>
         </div>
     </section>
